wrap answers on overview screen to prevent ugliness.

--- a/css/pb.css
+++ b/css/pb.css
@@ -184,6 +184,8 @@
 .pi_answer{
     font-size: 16px;
     font-family: monospace;
+    max-width: 18ex;
+    word-wrap: break-word;
 }
 
 .pi_status{
